--- a/README
+++ b/README
@@ -2,4 +2,4 @@ Yet another Mandelbrot Viewer.
 
 Download it, play with it, have fun, anything goes.
 
-Cheak it out at http://y69.tech/mandelbrot
+Cheak it out at http://mandelbrot.nicklem.tech
